--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -18,6 +18,22 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Friday May 25th, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">Progress on Illustrator. I feel good. Intentional work into building interactive SVGs --Finally! 💥</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>reduce()</li>
+    <li>map()</li>
+    <li>Finish Illustrator work.</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
   <h2 class="date">Wednesday May 24th, 2017</h2>
   <h4 class="sleep">Slept: 4 hours</h4><br><br>
   <h3 class="subtitle">Watched a <a target="_blank" href="https://youtu.be/jGJcStZhWGI">most excellent talk</a> on programming and John Keats. Today, a directive with svg icon sprite.</h3>
