ecma & journal entries

--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -117,6 +117,8 @@ console.log(repeaters); // [a: 3, good: 3]</pre>
 
   console.log("I slept", sum, "hours this week"); // I slept 49 hours this week.
 </pre>
+
+Here is <a target="_blank" href="https://medium.freecodecamp.com/reduce-f47a7da511a9">MUCH More on reduce();</a> at FCC.
 </div>
 
 <div class="framed1">
