--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -31,7 +31,7 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>reduce(); done!</li>
   </ol>
   <hr />
   <h2 class="date">Wednesday May 24th, 2017</h2>
