--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -32,6 +32,8 @@
   <h3>Done: </h3>
   <ol class="done">
     <li>reduce(); done!</li>
+    <li><a href="https://codepen.io/LeoFib/pen/OmGXbW">css nav</a></li>
+    <li>css controlled loader</li>
   </ol>
   <hr />
   <h2 class="date">Wednesday May 24th, 2017</h2>
