--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -18,7 +18,23 @@
     </ol>
     <hr />
   -->
-  <h2 class="date">Friday May 25th, 2017</h2>
+  <h2 class="date">Friday May 26th, 2017</h2>
+  <h4 class="sleep">Slept: 4 hours</h4><br><br>
+  <h3 class="subtitle">Got lots done last night. It's a S☀️nny day. Finally settling on < object > tag to embed svgs, though with angular < ng-includes> seem the way to go for now. As it was a year ago, though, it still seems a sea of 'generalizing' or dabbling. --Enough of that, though. I have more Angular to do.</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Angular: continue with directives.</li>
+    <li>Algorithms refactored with ES6</li>
+    <li>Notes on CSS variables. --Wes Bos project 3 (?)</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
+  <hr />
+  <h2 class="date">Thursday May 25th, 2017</h2>
   <h4 class="sleep">Slept: 7 hours</h4><br><br>
   <h3 class="subtitle">Progress on Illustrator. I feel good. Intentional work into building interactive SVGs --Finally! 💥</h3>
 
