svg edit & journal

--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -18,6 +18,20 @@
     </ol>
     <hr />
   -->
+  <h2 class="date">Saturday May 27th, 2017</h2>
+  <h4 class="sleep">Slept: 7 hours</h4><br><br>
+  <h3 class="subtitle">Moar! Things are progressing! Not utilizing ES6 enough in my code, though. Will do Dan Wellman's ES6 exercises today.</h3>
+
+  <br>
+  <h3>To do:</h3>
+  <ol class="todo">
+    <li>Dan Wellman's ES6 exercises.</li>
+    <li>Back to jquery.</li>
+  </ol><br>
+  <h3>Done: </h3>
+  <ol class="done">
+    <li>PLACEHOLDERDONETASKS</li>
+  </ol>
   <h2 class="date">Friday May 26th, 2017</h2>
   <h4 class="sleep">Slept: 4 hours</h4><br><br>
   <h3 class="subtitle">Got lots done last night. It's a S☀️nny day. Finally settling on < object > tag to embed svgs, though with angular < ng-includes> seem the way to go for now. As it was a year ago, though, it still seems a sea of 'generalizing' or dabbling. --Enough of that, though. I have more Angular to do.</h3>
@@ -31,7 +45,10 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>refactored svg loader with directive using CSS variables</li>
+    <li>filled out examples of callbacks entry in ecam view</li>
+    <li>ES6 for of loop --Needs more work, but wow, damn it's nice!</li>
+    <li>looking into case studies</li>
   </ol>
   <hr />
   <h2 class="date">Thursday May 25th, 2017</h2>
