--- a/states/svg/svg.html
+++ b/states/svg/svg.html
@@ -19,6 +19,7 @@
 <span class="y dkbg ctrtxt"><b><</b>svg .... preserveAspectRatio="xMinYMin meet" width="100%" height="100%"<b>></b></span>
 (This ensures that everything is scalable at the proper aspect ratio)
 6. You can safely erase version attrs, but erase xmlns attrs ONLY if inline in HTML
+7. RWD: change default w/h to percentage values.
 </div>
 
 <!-- ===================================END OF TOP-RIGHT-BOX=================================== -->
