--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -30,6 +30,7 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
+    <li>`Template literals are ${adjective}!`</li>
     <li>PLACEHOLDERDONETASKS</li>
   </ol>
   <h2 class="date">Friday May 26th, 2017</h2>
