--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -30,8 +30,9 @@
   </ol><br>
   <h3>Done: </h3>
   <ol class="done">
-    <li>`Template literals are ${adjective}!`</li>
-    <li>PLACEHOLDERDONETASKS</li>
+    <li>let adjective = `useful`;  `Template literals are ${adjective}!`;  </li>
+    <li>Object.assign() --amazing! <a href="https://youtu.be/vM7Tif98Dlo" target="_blank">Here's a helpful (albeit annoying) link</a></li>
+    
   </ol>
   <h2 class="date">Friday May 26th, 2017</h2>
   <h4 class="sleep">Slept: 4 hours</h4><br><br>
