--- a/states/misc/misc.html
+++ b/states/misc/misc.html
@@ -29,7 +29,7 @@ div {
 <hr>
 <div class="framed5">
   <h3>Randomized Quiz over 3 objects</h3>
-<pre class="prettyprint">
+<pre class="prettyprint linenums">
 const asian = { nat: "Asians", meal: "pork", pan: "a wok", oil: "sesame oil" };
 const american = { nat: "Americans", meal: "chicken", pan: "a frying pan", oil: "corn oil" };
 const italian = { nat: "Italians", meal: "pasta", pan: "a pot", oil: "olive oil" };
