--- a/states/ecma/ecma.html
+++ b/states/ecma/ecma.html
@@ -50,7 +50,10 @@ jim.opinion.call(liz, "vanilla", "Sherbert" );
 6.   <span class="ltgreen">jim.opinion.call(liz<sup class="ltred">*</sup>, "vanilla", "ice cream.");</span> renders // <span class="ans med ltgreen">Hi, I'm Jim. I hate chocolate cake.</span><br />
 
 <sup class="ltred">This context is established by first arg of .call();</sup>
-
+<hr>
+var args = ["peach", "cobbler"];
+<em class="dkblue">Obj.method</em>.apply(<span class="ltred"><em>this</em></span>, <span class="ivr">args</span>);
+can, thus be really powerful.
 
 </span>
 </div>
