--- a/states/journal/journal.html
+++ b/states/journal/journal.html
@@ -32,7 +32,9 @@
   <ol class="done">
     <li>let adjective = `useful`;  `Template literals are ${adjective}!`;  </li>
     <li>Object.assign() --amazing! <a href="https://youtu.be/vM7Tif98Dlo" target="_blank">Here's a helpful (albeit annoying) link</a></li>
-    
+    <li>Lots of work done on call(); and apply();</li>
+    <li>added project of randomized quiz --visible in 'misc' view.</li>
+
   </ol>
   <h2 class="date">Friday May 26th, 2017</h2>
   <h4 class="sleep">Slept: 4 hours</h4><br><br>
